Issue #877: Fixing small gap below primary tabs.

--- a/core/themes/seven/css/style.css
+++ b/core/themes/seven/css/style.css
@@ -255,7 +255,7 @@ ul.menu li.expanded {
   }
 }
 ul.primary {
-  height: 2.534em;
+  height: 2.6em;
   border: none;
   float: right; /* LTR */
   margin: 0;
